--- a/main2.css
+++ b/main2.css
@@ -17,3 +17,30 @@
   text-decoration: none;
   float: left;
 }
+body{
+  margin: 0;
+  padding: 0;
+}
+#load{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 99999;
+  background: url("eye.gif") no-repeat center center black;
+}
+@font-face {
+    font-family: 'char_bbregular';
+    src: url('fonts/charbb_reg-webfont.woff2') format('woff2'),
+         url('fonts/charbb_reg-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+h1{
+  font-size: 60;
+  font-family: 'char_bbregular';
+  /* background: linear-gradient(rgba(255, 165,0,0.8) 40%, rgba(255,255,0,0.8)); */
+  background: linear-gradient(rgba(255,255,0,0.8) 10%, rgba(255,165,0,0.8));
+  -webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
